NetTango/UI/Minor: Fix spacing on submenu items

--- a/public/stylesheets/nettango-builder.css
+++ b/public/stylesheets/nettango-builder.css
@@ -259,6 +259,12 @@ body#ntp-body, html#ntp-body {
   line-height: 0.5em;
 }
 
+.ntb-list-submenu {
+  padding: 8px;
+  padding-top: 2px;
+  padding-bottom: 3px;
+}
+
 .ntb-menu-text {
   display: block;
   padding: 8px;
